# nonebot-plugin-ottohzys

./: README.md  pyproject.toml
.github/: voice_packs.json
nonebot_plugin_example/: __init__.py
nonebot_plugin_ottohzys/: __init__.py  __main__.py  audio.py  config.py  hzys.py  migrate.py  resource.py
nonebot_plugin_ottohzys/pack/: __init__.py  audio.py  hzys.py  manager.py  online.py  pack.py
nonebot_plugin_ottohzys/res/: chinglish.json
