[project]
name = "nonebot-plugin-ottohzys"
dynamic = ["version"]
description = "otto!"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.4.1",
    "nonebot-plugin-alconna>=0.54.2",
    "soundfile>=0.13.1",
    "numpy>=2.0.2",
    "pypinyin>=0.53.0",
    "psola>=0.0.1",
    "anyio>=4.8.0",
    "httpx>=0.27.2",
    "async-lru>=2.0.4",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-ottohzys"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_ottohzys/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
