[project]
name = "nonebot-plugin-ottohzys"
dynamic = ["version"]
description = "otto!"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.4.3",
    "nonebot-plugin-alconna>=0.59.4",
    "nonebot-plugin-localstore>=0.7.4",
    "cookit[pydantic,nonebot-alconna,nonebot-localstore]>=0.13.0",
    "soundfile>=0.13.1",
    "numpy>=2.2.6",
    "pypinyin>=0.55.0",
    "psola>=0.0.1",
    "anyio>=4.10.0",
    "httpx>=0.28.1",
    "async-lru>=2.0.5",
    "cachetools>=6.1.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-ottohzys"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nonebot_plugin_ottohzys/__init__.py"
